--- a/src/style.css
+++ b/src/style.css
@@ -107,16 +107,29 @@ input {
 footer {
   text-align: center;
 }
-.forcast-icons {
-  margin: 80px 50px -35px 50px;
-  line-height: 100px;
-  font-size: 48px;
+.forcasts {
+  margin: 50px 50px -35px 50px;
+  line-height: 20px;
 }
-
-.forcast-notes {
+.forcast-icon {
+  width: 50px;
+}
+.forcast-date,
+.forcast {
   font-size: 24px;
 }
-
+.weather-forcast-temp-min {
+  opacity: 0.5;
+}
+.weather-forcast-temp-min,
+.weather-forcast-temp-max {
+  font-size: 18px;
+}
+.forcast {
+  font-weight: 400;
+  margin-left: 70px;
+  opacity: 0.8;
+}
 .temp .active {
   cursor: default;
   color: #27296d;
