--- a/src/style.css
+++ b/src/style.css
@@ -1,32 +1,42 @@
+body {
+  background: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
+}
+
 .wrapper {
-  border: 1px solid #291d08;
-  display: block;
+  background: transparent;
+
+  border: 1px #291d08;
+  border-style: dashed;
+  border-width: thin;
   margin: 0 auto;
+  display: block;
   margin-top: 50px;
   margin-bottom: 50px;
-  width: 1050px;
-  height: 600px;
-  background: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
-  font-family: "PT Mono", monospace;
+  width: 809px;
+  height: 500px;
+  font-family: "Lobster", cursive;
   color: #27296d;
 }
+
 .temp {
-  margin: 80px 50px -35px 50px;
+  margin: 30px 50px -35px 50px;
 }
 #temp {
-  font-size: 120px;
+  font-size: 100px;
 }
 #description {
   margin-top: 10px;
-  font-size: 30px;
+  font-size: 24px;
   text-transform: capitalize;
 }
-
+#details {
+  font-size: 20px;
+}
 .temp .units {
   position: relative;
   font-size: 30px;
   top: -190px;
-  left: 130px;
+  left: 100px;
   color: #5e63b6;
   text-decoration: none;
 }
@@ -49,13 +59,13 @@ a:visited {
   transition: all 200ms ease-in-out;
 }
 #current-location {
-  width: 200px;
-  height: 50px;
+  width: 130px;
+  height: 35px;
   border-radius: 50px;
-  padding: 5px;
+  padding: 10px;
   background-color: #5e63b6;
   border: none;
-  font-size: 20px;
+  font-size: 10px;
 }
 .location-btn:hover {
   opacity: 0.85;
@@ -63,7 +73,7 @@ a:visited {
 }
 #weather-icon {
   display: block;
-  width: 200px;
+  width: 150px;
   margin: 0 auto;
   margin-top: 110px;
   text-align: center;
@@ -74,22 +84,25 @@ h2 {
   color: #27296d;
   text-align: center;
 }
-#search-form {
-  display: block;
-  margin: 0 auto;
-  width: 300px;
+.search {
+  position: relative;
+  margin: 30px 15px 10px -25px;
+}
+.search-form {
+  width: 200px;
+  position: relative;
+  margin: 30px 15px 10px 50px;
 }
 #search-btn {
   border-radius: 50px;
   padding: 5px;
   background-color: transparent;
+  margin-top: 20px;
   display: block;
   margin: 0 auto;
-  margin-top: 20px;
 }
 #search-btn:hover {
   opacity: 50%;
-
   border-color: #a393eb;
   border-radius: 50px;
   transition: all 200ms ease-in-out;
@@ -111,19 +124,19 @@ footer {
   margin: 50px 50px -35px 50px;
   line-height: 20px;
 }
-.forcast-icon {
-  width: 50px;
+#forcast-icon {
+  width: 60px;
 }
 .forcast-date,
 .forecasts {
-  font-size: 24px;
+  font-size: 15px;
 }
 .weather-forcast-temp-min {
   opacity: 0.5;
 }
 .weather-forcast-temp-min,
 .weather-forcast-temp-max {
-  font-size: 18px;
+  font-size: 15px;
 }
 .forecasts {
   font-weight: 400;
@@ -133,4 +146,7 @@ footer {
 .temp .active {
   cursor: default;
   color: #27296d;
+}
+footer {
+  margin-top: 10px;
 }
