--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body {
   background-size: 100%;
 }
 .night {
-  background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/075/550/original/Poetic_GIFs_of_Starry_Nights.gif?1680806507");
+  background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/075/671/original/linistars.gif?1680885396");
   background-size: 100%;
 }
 .wrapper {
@@ -105,6 +105,11 @@ a:visited {
   margin-top: 110px;
   text-align: center;
 }
+#weather-icon:hover {
+  opacity: 50%;
+  transition: all 500ms ease-in-out;
+}
+
 h1,
 h2 {
   margin-top: -10px;
